--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <label for="urlInput">URL</label>
     <div class="row">
       <input id="urlInput" type="url" placeholder="https://example.com" aria-label="URL to encode" />
-      <button id="generateBtn">Generate</button>
+      <!-- make explicit it's not a submit button -->
+      <button id="generateBtn" type="button">Generate</button>
     </div>
 
     <p id="msg" class="msg" role="status" aria-live="polite"></p>
